@@ -1,7 +1,9 @@
 1.3.4
 =====
-Aug 17, 2016, 4:08 PM GMT+10 (AEST)
+Aug 17, 2016, 8:32 PM GMT+10 (AEST)
 - Report ambiguous stepdef lookup errors instead of exiting interpreter
+- Raise invalid property error if a property without a key is found in a 
+  properties file
 
 1.3.3
 =====
